--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10099100.md#1" target="_blank">郑兢业：人吃与吃人（五）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/21/n10732313.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（1）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/5/n11431635.md#1" target="_blank">共产暴政录：盛世才与新疆的几个待解问题</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494526.md#1" target="_blank">英国女士秘鲁探险 偶遇大法后改变人生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
